Replaced Tichy with Tobias and Commits with Nachverfolgbarkeitsverbindungen.

--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ button:disabled {
   /* Make a circle */
   border-radius: 50%;
   /* Images must be 300x300 */
-  background-image: url('./resources/tichy_swt.jpg');
+  background-image: url('./resources/tobias.jpg');
   background-size: 100% 100%;
 }
 
